# testrail-python

./: readme.md  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  pre-merge-checks.yml
src/extended/: api.py  models.py
src/testrail/: __init__.py  _py2.py  _py3.py  license.md
