[metadata]
# replace with your username:
name = testrail
version = 0.0.1
author = gurock
author_email = noreply@gurock.com
description = "A python module for testrail's API"
long_description = file: readme.md
# license = file: LICENSE.md - is there a license_file?
long_description_content_type = text/markdown
url = https://github.com/gurock/testrail-api
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    requests
package_dir =
    = src
packages = find:

[options.packages.find]
where = src