[metadata]
# replace with your username:
name = testrail
author = gurock
author_email = noreply@gurock.com
description = "A python module for testrail's API"
long_description = file: readme.md
license_files = license.md - is there a license_file?
long_description_content_type = text/markdown
url = https://github.com/gurock/testrail-api
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
setup_requires=
    setuptools_scm
    wheel
install_requires =
    requests
package_dir =
     src
packages = find:

[options.packages.find]
where = src
